# PrayLike-Backend

./: .gitignore  AGENTS.md  README.md  alembic.ini  config.py  database.py  dependencies.py  main.py  models.py  posts.db.bak-20251128164227  posts.sqlite  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 1c3c62f5d3af_drop_ai_chat_usage_table.py  6e7c1c537f7e_add_image_url_to_create_post.py  8f0c2d6f6e4d_add_ai_chat_sessions.py  9d5a0df2c1a8_add_ai_chat_usage_events.py  b7f65e9ad5c3_add_avatar_url_to_user_profile.py  d0e4a31fb1f8_create_schema.py  e0c7a8abd8cd_use_json_type_for_tribe_images.py
core/: security.py
module/: ai_service.py  auth.py  friend.py
routers/: activities.py  ai.py  auth.py  auth.py.bak  interactions.py  notifications.py  posts.py
services/: __init__.py  email.py  notifications.py  oauth.py  onesignal_service.py
tests/: test_activities.py  test_activity_notifications.py  test_ai_chat_sessions.py  test_auth_avatar.py  test_auth_tribe.py  test_friend_notifications.py  test_notifications.py  test_witness_image.py  test_ycoin_transactions.py
ycoin/: ycoin_models.py  ycoin_router.py  ycoin_service.py
